# bajor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.list.example  pyproject.toml  pytest.ini
.github/workflows/: codeql-analysis.yml  deploy_batch_scripts.yml  deploy_production.yml  deploy_staging.yml  run-tests.yml
azure/batch/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
azure/batch/scripts/: README.md  predict_catalog_with_model.py  predict_on_catalog.py  promote_best_checkpoint_to_model.sh  test_predict_on_catalog.py  train_model_finetune_on_catalog.py  train_model_on_catalog.py  train_on_catalog.py
bajor/: api.py  batch.py  env_helpers.py  log_config.py  main.py
bajor/apis/: basic_auth.py  predictions.py  training.py
bajor/batch/: checkpoint_strategies.py  client.py  jobs.py  predictions.py  runtime_config.py  train_finetuning.py  train_from_scratch.py  training.py
bajor/models/: job.py
bajor/training/: batch.py
docs/zoobot_azure_batch/: README.md
kubernetes/: deployment-production.tmpl  deployment-staging.tmpl
tests/: test_api.py  test_bajor.py  test_batch.py  test_main.py
tests/batch/: test_runtime_config.py  test_training.py
tests/training/: test_batch.py
