[tool.poetry]
name = "bajor"
version = "0.1.0"
description = "Azure Batch Job Runner - BaJoR"
authors = ["Cam Allen <contact@zooniverse.org>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
azure-storage-blob = "^12.12.0"
azure-batch = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
start = "bajor.main:start_app"
dev = "bajor.main:start_dev_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
