[tool.poetry]
name = "zoobot_batch"
version = "0.1.0"
description = "Zoobot batch job processing system"
authors = ["Cam Allen <contact@zooniverse.org>"]

[tool.poetry.dependencies]
python = "^3.8"
zoobot = {extras = ["pytorch"], version = "^0.0.4"}
requests = "^2.28.1"
h5py = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
